npm script to run the whole thing.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "description": "Do it, chicken.",
   "scripts": {
-    "build": "eleventy",
-    "watch": "eleventy --watch"
+    "dev": "grunt watch & eleventy --serve"
   },
   "repository": {
     "type": "git",
