--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "grunt-contrib-uglify-es": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-responsive-images": "^1.10.1"
+  },
+  "dependencies": {
+    "grunt-criticalcss": "^2.1.0"
   }
 }
