--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Do it, chicken.",
   "scripts": {
-    "dev": "grunt watch & eleventy --serve"
+    "dev": "grunt && grunt watch & eleventy --serve"
   },
   "repository": {
     "type": "git",
