--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "description": "Do it, chicken.",
   "scripts": {
-    "dev": "grunt critical && grunt watch & eleventy --serve"
+    "cms:precompile": "make-dir _site/admin && nunjucks-precompile _src/_templates > _site/admin/templates.js -i \"\\.(njk|css|svg)$\"",
+    "cms:bundle": "rollup --config",
+    "start": "concurrently \"npm run cms:bundle -- --watch\" \"chokidar \\\"_src/_templates/**\\\" -c \\\"npm run cms:precompile\\\"\" \"npm run serve\" \"grunt\"",
+    "serve": "cross-env ELEVENTY_ENV=development npx eleventy --serve",
+    "production": "npm run sass:process && npm run cms:precompile && npm run cms:bundle && grunt critical && grunt && eleventy"
   },
   "repository": {
     "type": "git",
@@ -21,6 +25,10 @@
   "homepage": "https://hire.wil.to",
   "devDependencies": {
     "@11ty/eleventy": "^0.7.1",
+    "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
+    "chokidar-cli": "^3.0.0",
+    "concurrently": "^7.0.0",
+    "cross-env": "^7.0.3",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -28,9 +36,15 @@
     "grunt-contrib-uglify-es": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-critical": "^2.0.0",
-    "grunt-responsive-images": "^1.10.1"
+    "grunt-responsive-images": "^1.10.1",
+    "make-dir-cli": "^3.0.0",
+    "rollup": "^2.64.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "dependencies": {
+    "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "grunt-criticalcss": "^2.1.0"
   }
 }
