--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "cms:bundle": "rollup --config",
     "start": "concurrently \"npm run cms:bundle -- --watch\" \"chokidar \\\"_src/_templates/**\\\" -c \\\"npm run cms:precompile\\\"\" \"npm run serve\" \"grunt\"",
     "serve": "cross-env ELEVENTY_ENV=development npx eleventy --serve",
-    "production": "npm run sass:process && npm run cms:precompile && npm run cms:bundle && grunt critical && grunt && eleventy"
+    "production": "npm run sass:process && npm run cms:precompile && npm run cms:bundle && grunt prod && grunt && eleventy"
   },
   "repository": {
     "type": "git",
