--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,10 +2,11 @@ backend:
   name: git-gateway
   branch: master
 media_folder: "_assets/img"
-media_folder: "_assets/img"
+public_folder: "/images"
 collections:
   - name: "sections"
     label: "Sections"
+    folder: "_src/sections"
     delete: true
     create: true
     preview_path: "/"
