--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "hire-wilto",
   "version": "0.0.1",
   "description": "Do it, chicken.",
@@ -51,6 +51,7 @@
   "dependencies": {
     "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
+    "@11ty/eleventy-plugin-rss": "^1.2.0",
     "grunt-criticalcss": "^2.1.0"
   }
 }
