--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "fs": "^0.0.1-security",
     "grunt-criticalcss": "^2.1.0"
   }
 }
